K8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
  labels:
    app: db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: DB-temp
  template:
    metadata:
      labels:
        app: DB-temp
    spec:
      containers:
        - name: postgres-db
          image: postgres:16
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: DB-temp
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
