K8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app
  labels:
    app: redis-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-temp
  template:
    metadata:
      labels:
        app: redis-temp
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-temp
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: NodePort
